# jetbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPTIMIZATION_REPORT.md  PROJECT.md  README.md  SECURITY.md  UPGRADE_PLAN.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  manifest.schema.json  sample_manifest.json
benchmarks/fixtures/: synthetic_income_001.json
benchmarks/local_manifests/: stress_private_batch.json  us_filings_private_batch.json
benchmarks/thresholds/: golden_minimum.json
docs/: BRANCH_PROTECTION.md  PROJECT.md  TECHNICAL_REVIEW_AND_PLAN.md  architecture_and_capabilities.md  financial_fact_platform_roadmap.md  pdf_engine_evaluation.md
examples/apple_10k_analysis/: .gitignore  README.md  apple_fy2024_export.json  run_example.py
examples/moutai_cross_project/: .gitignore  README.md  moutai_2025_export.json  run_example.py
examples/popmart_annual_analysis/: .gitignore  README.md  popmart_2024_export.json  run_example.py
examples/real_pdf_analysis/: .gitignore  README.md  run_example.py
scripts/: eval.py  local_ci.sh  open_ui_after_docker.py
scripts/git-hooks/: pre-commit
src/: cli.py
src/agent/: analysis_nodes.py  capabilities.py  context.py  extraction_nodes.py  graph.py  ingest_nodes.py  nodes.py  report_nodes.py  state.py
src/agent/adapters/: base.py  hermes.py
src/api/: auth.py  main.py  routes.py
src/export/: __init__.py  builder.py  schema.py
src/finance/: constants.py  facts.py  normalizer.py  schemas.py  signals.py  utils.py  validators.py
src/financial_report_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: anthropic_client.py  base.py  mock.py  openai_client.py  token_manager.py  utils.py
src/market/: cache.py  event_study.py  provider.py
src/pdf/: engine.py  extractor.py  ocr.py  operations.py  render.py  tables.py
src/prompts/: deep_analysis_prompt.md  key_notes_prompt.md  statement_extraction_prompt.md  trader_report_prompt.md
src/schemas/: __init__.py  models.py
src/storage/: backend.py  local_store.py  object_store.py  pg_store.py  task_store.py  vector_index.py
src/tasks/: __init__.py  analysis.py
src/utils/: document_metadata.py  ids.py  logging.py  metrics.py  metrics_collector.py  time.py  tracing.py
tests/: conftest.py  test_agent_intelligence.py  test_auth.py  test_benchmark_manifest.py  test_celery_task.py  test_embedding_index.py  test_eval_script.py  test_event_study_extended.py  test_export.py  test_finance_facts.py  test_hermes_adapter.py  test_input_validation.py  test_llm_routing.py  test_market_providers.py  test_metrics.py  test_metrics_collector.py  test_nodes_helpers.py  test_normalizer_and_events.py  test_object_store.py  test_ocr.py  test_openai_compatible_client.py  test_pdf_tables.py  test_pdfium_engine.py  test_pg_store.py  test_pipeline_mock.py  test_render.py  test_routes_web.py  test_schemas.py  test_signals.py  test_signals_extended.py  test_storage.py  test_table_router.py  test_token_manager.py  test_tracing.py  test_validators.py  test_validators_extended.py  test_vector_index.py
tests/golden/: conftest.py  test_golden.py
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: document-list.spec.ts
web/src/: App.vue  main.ts  shims.d.ts
web/src/api/: client.ts  docs.spec.ts  docs.ts  types.ts
web/src/components/: AgentInsightsPanel.spec.ts  AgentInsightsPanel.vue  EvidenceLink.vue  FactsReviewPanel.vue  KpiCard.vue  NotesPanel.vue  OverviewPanel.spec.ts  OverviewPanel.vue  PdfViewer.vue  ReportPanel.vue  RiskSignalsPanel.vue  SeverityTag.vue  StatementsPanel.vue  TablesPanel.vue
web/src/composables/: usePolling.ts
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/styles/: index.css
web/src/views/: DocumentDashboard.vue  DocumentList.spec.ts  DocumentList.vue  UploadView.vue
