[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-report-agent"
version = "0.1.0"
description = "PDF financial report parsing and trader analysis agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Your Team"}]
keywords = ["pdf", "finance", "fastapi", "langgraph"]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.5",
  "langgraph>=0.0.40",
  "typer>=0.9",
  "python-multipart>=0.0.6",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "structlog>=23.1",
  "pdfplumber>=0.10",
  "PyMuPDF>=1.23",
  "openai>=1.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-text-splitters>=0.3",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.8",
  "moto[s3]>=5.0",
]
# OCR support (P2): pip install financial-report-agent[ocr]
ocr = [
  "paddleocr>=2.7",
  "paddlepaddle>=2.5",
  "pytesseract>=0.3",
  "Pillow>=10.0",
]
# Alternative table extraction (P2): requires OpenCV
tables = [
  "camelot-py[cv]>=0.11",
]
# Embedding-based RAG (P3): pip install financial-report-agent[embeddings]
embeddings = [
  "faiss-cpu>=1.7",
  "sentence-transformers>=2.2",
]
# Anthropic Claude (P3): pip install financial-report-agent[anthropic]
anthropic = [
  "anthropic>=0.40",
]
# Celery task queue (P4): pip install financial-report-agent[celery]
celery = [
  "celery[redis]>=5.3",
]
# PostgreSQL storage (P4): pip install financial-report-agent[postgres]
postgres = [
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]
# S3/MinIO object storage (P4): pip install financial-report-agent[s3]
s3 = [
  "boto3>=1.34",
]
# Install everything
all = [
  "financial-report-agent[ocr,tables,embeddings,anthropic,celery,postgres,s3]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
